--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -21,6 +21,7 @@ ion-footer{
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 5px;
+    --slot: end ;
   }
 
   .loading-container {
