--- a/src/app/pages/messages/chatbox/chatbox.component.scss
+++ b/src/app/pages/messages/chatbox/chatbox.component.scss
@@ -25,7 +25,7 @@
 }
   
 .message-sent .message-content {
-    background-color: #dcf8c6;
+    background-color: #A8DADC; // #dcf8c6;
 }
   
 .message-bubble {
