--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -9,38 +9,39 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form [formGroup]="myForm" (ngSubmit)="addPersonalBest()">
-    <ion-item>
-      <ion-label>Exercise</ion-label>
-      <ion-select formControlName="selectedExercise">
-        <ion-select-option *ngFor="let exercise of exerciseOptions" [value]="exercise">
-          {{ exercise }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
+<!-- <ion-content> -->
+  <!-- <form (ngSubmit)="addPersonalBest(formData)">
+    <ion-list>
+      <ion-item>
+        <ion-label>Weight</ion-label>
+        <ion-input [(ngModel)]="PersonalBes.weight" type="number" placeholder="Weight"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>Weight Lifted</ion-label>
-      <ion-input type="number" formControlName="weight"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>Repetitions</ion-label>
+        <ion-input [(ngModel)]="PersonalBes.repetitions" type="number" placeholder="No. Reps"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>Repetition Count</ion-label>
-      <ion-input type="number" formControlName="repetitions"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>Notes</ion-label>
+        <ion-input [(ngModel)]="PersonalBes.notes" type="text" placeholder="Enter Notes"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>Date Achieved</ion-label>
-      <ion-datetime displayFormat="MM, DD, YYYY" formControlName="date"></ion-datetime>
-    </ion-item>
+      <ion-button expand="block" (click)="addPersonalBest()">Add Personal Best</ion-button>
+    </ion-list>
+    </form> -->
+    <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()">
+      <ion-item>
+        <ion-label>Name</ion-label>
+        <ion-input formControlName="name" type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Email</ion-label>
+        <ion-input formControlName="email" type="email"></ion-input>
+      </ion-item>
+      <ion-button type="submit" [disabled]="PersonalBestForm.invalid">Submit</ion-button>
+    </form>
 
-    <ion-item>
-      <ion-label>Notes</ion-label>
-      <ion-textarea formControlName="notes"></ion-textarea>
-    </ion-item>
-
-    <ion-button expand="full" type="submit">Add Personal Best</ion-button>
-  </form>
-  {{ exerciseOptions | json }}
-</ion-content>
+ 
+    
+<!-- </ion-content> -->
