firestore storage working

--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -19,9 +19,11 @@
     <ion-item>
       <ion-label>Exercise</ion-label>
       <ion-select formControlName="exercise" placeholder="Select One">
-        <ion-select-option value="benchpress">Bench Press</ion-select-option>
-        <ion-select-option value="squat">Squat</ion-select-option>
-        <ion-select-option value="deadlift">Deadlift</ion-select-option>
+        <ion-select-option value="Bench Press">Bench Press</ion-select-option>
+        <ion-select-option value="Squat">Squat</ion-select-option>
+        <ion-select-option value="Deadlift">Deadlift</ion-select-option>
+        <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
+        <ion-select-option value="Barbell Row">Barbell Row</ion-select-option>
       </ion-select>
     </ion-item>
 
