--- a/src/app/pages/messages/chatroom/chatroom.component.scss
+++ b/src/app/pages/messages/chatroom/chatroom.component.scss
@@ -17,3 +17,20 @@
 ion-title {
   text-align: center;
 }
+
+ion-content {
+  position: relative;
+}
+
+.inline-dropdown {
+  position: fixed;
+  top: 50px;
+  right: 0;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  z-index: 999;
+}
+
+.active {
+  background-color: #f1f1f1;
+}
