--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -8,5 +8,16 @@ ion-searchbar {
 
 .no-bullet {
     list-style-type: none;
+}
+
+
+.friend-container {
+    background: green;
+}
+
+.friend-photo {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
   }
   
