--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -20,10 +20,11 @@
       <ion-label>Exercise</ion-label>
       <ion-select formControlName="exercise" placeholder="Select One">
         <ion-select-option value="Bench Press">Bench Press</ion-select-option>
-        <ion-select-option value="Squat">Squat</ion-select-option>
-        <ion-select-option value="Deadlift">Deadlift</ion-select-option>
+        <ion-select-option value="Squats">Squats</ion-select-option>
+        <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
         <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
-        <ion-select-option value="Barbell Row">Barbell Row</ion-select-option>
+        <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+        <ion-select-option value="Push ups">Push ups</ion-select-option>
       </ion-select>
     </ion-item>
 
