--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -62,7 +62,7 @@
 
 <ion-footer>
   <ion-item lines="none">
-    <ion-input placeholder="Type a message"></ion-input>
+    <ion-textarea placeholder="Type a message"></ion-textarea>
     <ion-icon name="send"></ion-icon>
   </ion-item>
 </ion-footer>
