create group page added

--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -37,7 +37,7 @@
 
 <ion-footer>
   <ion-item lines="none">
-    <ion-input placeholder="Type a message" [(ngModel)]="message.text"></ion-input>
+    <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     <ion-icon name="send" (click)="sendMessage()"></ion-icon>
   </ion-item>
 </ion-footer>
