Delation of Personal Best works

--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -6,6 +6,7 @@
       </ion-item>
     </ion-toolbar>
   </ion-header>
+<ion-content>
 
 <app-personal-bests-chart *ngIf="!showForm">
 
@@ -56,3 +57,5 @@
 </form>
 </ion-content>
 
+  
+</ion-content>
