--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -39,7 +39,7 @@ l<ion-segment (ionChange)="onSegmentChange($event)" value="0" [scrollable]="true
                 
             </ion-grid>
             <ion-icon name="alert-circle-outline"></ion-icon><ion-text class="schedule-value">{{getDaysleft(goal)}} Days Left</ion-text><br>
-            <ion-icon name="american-football-outline"></ion-icon><ion-text class="schedule-value">{{goal.Tasks!.length}} Goals</ion-text><br>
+            <ion-icon name="american-football-outline"></ion-icon><ion-text class="schedule-value">{{goal.Tasks!.length}} Tasks</ion-text><br>
             <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">Started {{goal.startDate}}</ion-text><br>
             <ion-icon name="alarm-outline"></ion-icon><ion-text class="schedule-value">Ending {{goal.endDate}}</ion-text><br>
         </ion-card-content>
