--- a/src/app/pages/goalview/goalview.page.html
+++ b/src/app/pages/goalview/goalview.page.html
@@ -3,62 +3,48 @@
     <ion-item>
       <backbutton></backbutton>
       <ion-title>Goal View</ion-title>
-
     </ion-item>
   </ion-toolbar>
 </ion-header>
 
+<ion-content [fullscreen]="true" class="form-content">
+  <form [formGroup]="goalForm" (ngSubmit)="onSubmit()" class="ion-padding">
+    <ion-item>
+      <ion-label position="floating">Goal Name</ion-label>
+      <ion-input type="text" formControlName="name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Goal Description</ion-label>
+      <ion-input type="text" formControlName="description"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Start</ion-label>
+      <ion-input type="date" formControlName="start"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">End</ion-label>
+      <ion-input type="date" formControlName="end"></ion-input>
+    </ion-item>
 
-  <ion-content [fullscreen]="true" class="form-content">
-    <label>Name of the Goal</label>
+    <form [formGroup]="TaskForm">
+      <div *ngFor="let control of Taskses.controls; index as i;" formArrayName="Taskses" class="form-group">
+        <div [formGroupName]="i" class="task-card">
+          <input matInput type="text" placeholder="Name Task" formControlName="content" class="form-control">
+          <button ion-button clear icon-only (click)="remove(i)">
+            <ion-icon name="close"></ion-icon>
+          </button>
+        </div>
+      </div>
+      <ion-button (click)="addControl()" expand="full" color="primary">Add New Task</ion-button>
+    </form>
 
-        <form [formGroup]="goalForm" (ngSubmit)="onSubmit()" class="ion-padding" >
-
-          <ion-item>
-            <ion-label position="floating">Goal Name</ion-label>
-            <ion-input type="text" formControlName="name"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Goal Description</ion-label>
-            <ion-input type="text" formControlName="description"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked">Start</ion-label>
-            <ion-input type="date" formControlName="start"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked">End</ion-label>
-            <ion-input type="date" formControlName="end"></ion-input>
-          </ion-item>
-
-          <form [formGroup]="TaskForm">
-
-            <div *ngFor="let control of Taskses.controls; index as i;" formArrayName="Taskses" class="form-group">
-
-              <div [formGroupName]="i">
-                <div class="task-card">
-                  <input matInput type="text" placeholder="Name Task" formControlName="content" class="form-control">
-                  <button class="button task-button" type="button" (click)="remove(i)">Remove</button>
-                </div>
-              </div>
-
-            </div>
-            <ion-button (click)="addControl()">Add New Task</ion-button>
-          </form>
-
-          <ion-row>
-            <ion-col>
-              <ion-button fill="outline" expand="block" size="small"  (click) = "goback()" >Cancel</ion-button>
-            </ion-col>
-            <ion-col>
-              <ion-button fill="outline" expand="block" size="small" type="submit" [disabled]="!goalForm.valid">Save Goal</ion-button>
-            </ion-col>
-          </ion-row>
-        </form>
-    </ion-content>
-
-
-
-
-
-
+    <ion-row>
+      <ion-col>
+        <ion-button fill="outline" expand="block" size="small" (click)="goback()">Cancel</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button fill="outline" expand="block" size="small" type="submit" [disabled]="!goalForm.valid">Save Goal</ion-button>
+      </ion-col>
+    </ion-row>
+  </form>
+</ion-content>
