--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -12,7 +12,13 @@
 
 </app-personal-bests-chart>
 
-<ion-button *ngIf="!showForm" (click)="openPopup()">Add new best</ion-button>
+<!-- <ion-button *ngIf="!showForm" (click)="openPopup()">Add new best</ion-button> -->
+
+<ion-fab slot="fixed" vertical="bottom" horizontal="center">
+  <ion-fab-button *ngIf="!showForm" (click)="openPopup()">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
 <ion-content *ngIf="showForm">
 <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" >
