--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -47,11 +47,11 @@
     Rating: {{ gym.rating ? gym.rating : 'No Rating' }}
   </ion-card-content>
   <ion-card-content class="friend-container">
-    <ng-container *ngIf="gym.friendsLocationInfo.length > 0; else noFriends">
+    <ng-container *ngIf="gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
       <ion-card-header>
         Friends that have workout sessions scheduled here:
       </ion-card-header>
-      <ul class="no-bullet">
+      <!-- <ul class="no-bullet">
         <li *ngFor="let friend of gym.friendsLocationInfo" (click)="viewProfile(friend.id)">
           <div class="friend-details">
           <img [src]="friend[0].profilePhoto" alt="Profile Photo" class="friend-photo"/>
@@ -65,7 +65,7 @@
           </div>
           </div>
         </li>
-      </ul>
+      </ul> -->
     </ng-container>
     <ng-template #noFriends>
       No friends have workout sessions scheduled here
