added ngIf for when there is no photo

--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -36,7 +36,9 @@
 </ion-card> -->
 <ion-card *ngFor="let gym of gyms.results" (click)="selectGym(gym.name, gym.place_id)">
   <ng-container *ngIf="gym.business_status=='OPERATIONAL'">
-    <img [src]="getPhotoUrl(gym?.photos?.[0]?.photo_reference)"  alt="Silhouette of mountains"/>
+    <ng-container *ngIf="gym?.photos?.[0]?.photo_reference">
+      <img [src]="getPhotoUrl(gym?.photos?.[0]?.photo_reference)"  alt="Silhouette of mountains"/>
+    </ng-container>
   <ion-card-header>
     <ion-card-title>{{ gym.name }}</ion-card-title>
     <ion-card-subtitle>{{ gym.vicinity }}</ion-card-subtitle>
