--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -19,7 +19,7 @@
 </ion-searchbar>   
 
 <ion-item>
-  <ion-label position="stacked">Maximum Distance (in kilometers)</ion-label>
+  <ion-label position="stacked">Search Radius (km): </ion-label>
   <ion-input type="number" [(ngModel)]="maxDistance" (ionInput)="searchNearbyGyms()"></ion-input>
 </ion-item>
 
@@ -49,7 +49,7 @@
     Rating: {{ gym.rating ? gym.rating : 'No Rating' }}
   </ion-card-content>
   <ion-card-content class="friend-container">
-    <ng-container *ngIf="gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
+    <ng-container *ngIf="gym.friendsLocationInfo && gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
       <ion-card-header>
         Friends that have workout sessions scheduled here:
       </ion-card-header>
