--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -9,7 +9,7 @@
         </div>
       <form [formGroup]="registrationForm"
       ngxsForm="register.registrationForm"
-      (submit)="register()">
+      (submit)="AcceptUserTerms()">
         <ion-item class="input-item">
           <ion-label position="floating">
             <ion-icon src="/assets/vector-icon.svg"></ion-icon>  Email
