--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,3 +1,4 @@
+
 <div class="outer-container">
   <ion-content>
     <div class="inner-container">
@@ -39,7 +40,16 @@
               <ion-card-title> 
                 <ion-icon name="american-football-outline"></ion-icon> Goals
               </ion-card-title>
-               <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+               <!-- <ion-skeleton-text [animated]="true"></ion-skeleton-text> -->
+
+               <!-- <canvas baseChart
+                [chartData]="chartData"
+                [chartLabels]="chartLabels"
+                [chartOptions]="chartOptions"
+                [chartType]="chartType"
+               ></canvas> -->
+
+
             </ion-card>
           </ion-col>
         </ion-row>
