--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -4,8 +4,7 @@
   <h1 class="center2">SweatSession-Bot</h1>
   <ion-list>
     <ion-item lines="none" *ngFor="let message of messages">
-      <p slot="end" *ngIf="message.sender === 'SS-bot'">{{":"}}{{message.sender}}</p>
-      <p *ngIf="message.sender === 'user'">{{message.sender}}{{": "}}</p>
+     
       <div [ngClass]="{'user-message': message.sender === 'user', 'bot-message': message.sender === 'SS-bot'}">
         {{ message.text }}
       </div>
@@ -20,7 +19,7 @@
 <ion-footer>
   <ion-toolbar color="light">
     <ion-input [(ngModel)]="userMessage" placeholder="Enter your Question"></ion-input>
-    <ion-button fill="outline" color="danger"  (click)="sendUserMessage()">Send</ion-button>
+    <ion-button slot="end" fill="outline" color="danger"  (click)="sendUserMessage()">Send</ion-button>
   </ion-toolbar>
 </ion-footer>
 
