--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -19,7 +19,7 @@
 <ion-footer>
   <ion-toolbar color="light">
     <ion-input [(ngModel)]="userMessage" placeholder="Enter your Question"></ion-input>
-    <ion-button fill="outline" color="danger"  (click)="sendUserMessage()">Send</ion-button>
+    <ion-button slot="end" fill="outline" color="danger"  (click)="sendUserMessage()">Send</ion-button>
   </ion-toolbar>
 </ion-footer>
 
