--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -26,14 +26,16 @@
         </div>
 
         <div [hidden]="selectedSegment!=='groups'">
-          <ion-item *ngFor="let group of [1,2,3]" lines="none" (click)="stageGroup()">
+          <ion-item *ngFor="let group of groups" lines="none" (click)="stageGroup(group)">
             <ion-avatar slot="start">
               <img alt="Silhouette of a person's head" src="/assets/Asset 2.png"/>
             </ion-avatar>
             <ion-label>
-              <h2>group {{group}}</h2>
-              <p>last message here</p>
-              <p class="timestamp">jan 01, 10:00 PM</p>
+              <h2>{{group.displayName}}</h2>
+              <div>
+                <p>last message here</p>
+                <p class="timestamp">jan 01, 10:00 PM</p>
+              </div>
             </ion-label>
           </ion-item>
         </div>
