--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -48,7 +48,7 @@
       <backbutton></backbutton>
       <ion-title>
         <ion-avatar slot="start">
-          <img alt="Silhouette of a person's head" src="src/app/assets/Asset 2.png"/>
+          <ion-img alt="Silhouette of a person's head" src="src/app/assets/Asset 2.png"/>
         </ion-avatar>
         <ion-label>Group name</ion-label>
       </ion-title>
