prevent cuttoff by renaming

--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -3,7 +3,7 @@
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title class="ion-text-center">Add Workout Session</ion-title>
+      <ion-title class="ion-text-center">Add Gym Session</ion-title>
     </ion-item>
   </ion-toolbar>
 </ion-header>
