back button styling modified

--- a/src/app/directives/backbutton/backbutton.component.html
+++ b/src/app/directives/backbutton/backbutton.component.html
@@ -1,1 +1,1 @@
-<ion-icon name="arrow-back-outline" (click) ="back()"></ion-icon>
+<ion-icon name="arrow-back-outline" (click) ="back()" class="larger-back-button"></ion-icon>
