--- a/src/app/pages/messages/chatbox/chatbox.component.html
+++ b/src/app/pages/messages/chatbox/chatbox.component.html
@@ -2,6 +2,9 @@
 [ngClass]="{ 'message-sent': message.senderId === currentUserId, 'message-received': message.senderId !== currentUserId }"
 >
   <div class="message-content">
+    <div class="messege-sender" *ngIf="showUser && profile">
+      ~ {{profile.displayName}}
+    </div>
     <div class="message-bubble">
       {{ message.text }}
     </div>
