--- a/src/app/pages/messages/chatbox/chatbox.component.scss
+++ b/src/app/pages/messages/chatbox/chatbox.component.scss
@@ -1,9 +1,3 @@
-.chat-container {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-  
 .message {
     display: flex;
     justify-content: flex-start;
@@ -36,4 +30,9 @@
     font-size: 12px;
     color: #999;
     margin-top: 4px;
+}
+
+.message-sender {
+    font-style: italic;
+    margin-bottom: 12px;
 }
