group chatroom updated

--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -1,25 +1,18 @@
-<!-- <ion-header>
+<ion-header>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton (click)="removeSession()"></backbutton>
       <ion-title>
-        <ion-item lines="none" (click)="viewOtherUser()">
+        <ion-item lines="none">
           <ion-avatar>
-            <ion-img [src]="friendProfile.profileURL" alt="profile pic here"></ion-img>
+            <ion-img alt="Silhouette of a person's head" [src]="group.profileURL"/>
           </ion-avatar>
           <ion-label>
-            <h2>{{friendProfile.displayName}}</h2>
-          </ion-label> 
+            {{group.displayName}}
+          </ion-label>
         </ion-item>
       </ion-title>
-      <ion-icon name="ellipsis-vertical-outline" id="trigger" slot="end"></ion-icon>
-      <ion-popover trigger="trigger" triggerAction="click">
-        <ng-template>
-          <ion-item lines="none">
-            clear chat
-          </ion-item>
-        </ng-template>
-      </ion-popover>
     </ion-item>
   </ion-toolbar>
 </ion-header>
@@ -30,6 +23,7 @@
       <chatbox
         [message]="message"
         [currentUserId]="currentUserId"
+        [showUser]=true
       ></chatbox>
     </div>
   </div>
@@ -40,29 +34,4 @@
     <ion-input placeholder="Type a message" [(ngModel)]="message.text"></ion-input>
     <ion-icon name="send" (click)="sendMessage()"></ion-icon>
   </ion-item>
-</ion-footer> -->
-
-<ion-header>
-  <ion-toolbar>
-    <ion-item lines="none">
-      <backbutton></backbutton>
-      <ion-title>
-        <ion-avatar slot="start">
-          <ion-img alt="Silhouette of a person's head" src="src/app/assets/Asset 2.png"/>
-        </ion-avatar>
-        <ion-label>Group name</ion-label>
-      </ion-title>
-    </ion-item>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
-
-<ion-footer>
-  <ion-item lines="none">
-    <ion-textarea placeholder="Type a message"></ion-textarea>
-    <ion-icon name="send"></ion-icon>
-  </ion-item>
-</ion-footer>
+</ion-footer> 
