--- a/src/app/pages/leaderboard/leaderboard.page.html
+++ b/src/app/pages/leaderboard/leaderboard.page.html
@@ -43,7 +43,7 @@
           
             <div class="stats">
               <ion-item lines="none" class="stats">
-                <ion-icon name="star-outline" slot="start"></ion-icon>
+                <!-- <ion-icon name="star-outline" slot="start"></ion-icon> -->
                 <ion-skeleton-text animated style="width: 70px; height: 16px; margin-left: 5px;"></ion-skeleton-text>
               </ion-item>
             </div>
