--- a/src/app/pages/leaderboard/leaderboard.page.scss
+++ b/src/app/pages/leaderboard/leaderboard.page.scss
@@ -1,9 +1,12 @@
 .outer-container {
     height: 100vh;
-    background-color: aqua;
 }
 
 .inner-container {
     padding-top: 50px;
     height: 100%;
+}
+
+ion-content {
+    --background: url('/assets/Asset 2.png') no-repeat center/contain fixed;
 }
