--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -29,13 +29,14 @@
         </ion-row>        
         <ion-row>
           <ion-col>
-            <ion-item class="location-item">
-              <ion-label position="floating">Location</ion-label>
-              <ion-input type="text" [(ngModel)]="schedule.location"></ion-input>
-              <!-- <ion-button> -->
-                <ion-icon name="location" slot="end" (click)="openLocationModal()" class="location-icon"></ion-icon>
-              <!-- </ion-button> -->
-            </ion-item>
+            <div class="location-container">
+              <ion-item class="location-item">   
+                <ion-label position="stacked">Location</ion-label>  
+                <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon."></ion-input>      
+              </ion-item>
+            
+              <ion-icon name="location" slot="end" (click)="openLocationModal()" class="location-icon"></ion-icon>
+            </div>
           </ion-col>
         </ion-row>
         <ion-row>
