--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
@@ -65,6 +65,18 @@ ion-toolbar ion-item {
   --background: #E63946
 }
 
+.location-container {
+  display: flex;
+  align-items: center;  
+}
+
+.location-icon {
+  margin-left: auto;  
+  margin-right: 24px; /* Same width as built-in calendar icon */
+  font-size: 20px !important; 
+  margin-top: 20px;
+}
+
 // .lower-icon {
 //   margin-top: 10px;
 // }
